assets/sass/budgetBar.scss
$darkGray: #5D5D5D;
$personaOne: #A3C9BB;
$personaOneDark: #839B91;
$personaTwo: #ABBD78;
$personaTwoDark: #889360;
$mainButton: #E9B364;
$mainButtonDark: #BF9256;
.mainButton {
    background-color: $mainButton;
}
.mainButtonDark {
    background-color: $mainButtonDark;
}
.personaOne {
    background-color: $personaOne;
}
.personaOneDark {
    background-color: $personaOneDark;
}
.personaTwo {
    background-color: $personaTwo;
}
.personaTwoDark {
    background-color: $personaTwoDark;
}
.budgetBar {
    height: 185px;
    position: fixed;
    display: flex;
    bottom: -120px;
    width: 100%;
    //background-color: $personaTwoDark;
    transition: bottom 0.5s;
    .barSummary {
        h2 {
            top: 65px;
            left: 0;
            width: 100%;
            position: absolute;
            font-family: "Open Sans", sans-serif;
            font-size: 25px;
            margin-left: 40px;
            margin-top: 10px;
            color: white;
            padding: 0 0;
            font-weight: bold;
        }
        p {
            top: 110px;
            left: 0;
            width: 80%;
            position: absolute;
            font-family: "Lato", sans-serif;
            font-size: 15px;
            margin-left: 40px;
            margin-top: 10px;
            color: white;
        }
    }
    .bar {
        width: 100%;
        height: 65px;
        //background-color: $personaTwo;
        display: flex;
        position: absolute;
        justify-content: space-between;
        h3 {
            color: white;
            text-align: center;
            font-family: "Open Sans", sans-serif;
            font-size: 25px;
            font-weight: 600;
            align-self: center;
            padding: 0 0;
            margin: 0 0;
            span {
                font-weight: 400;
            }
        }
        h3:first-of-type {
            margin-left: 17%;
        }
        a {
            text-decoration: none;
            align-self: center;
            span {
                color: white;
                text-align: center;
                font-family: "Open Sans", sans-serif;
                font-size: 25px;
                font-weight: 600;
                text-decoration: none;
                margin-right: 25px;
            }
        }
        .barLeft {
            height: 100%;
            width: 15%;
            position: absolute;
            //background-color: $personaTwoDark;
            display: flex;
            justify-content: center;
            align-items: center;
            cursor: pointer;
            span {
                h1 {
                    color: white;
                    text-align: center;
                    font-family: "Open Sans", sans-serif;
                    font-size: 25px;
                    margin: 0 0;
                    font-weight: bold;
                }
            }
        }
    }
}
.barUp {
    bottom: 0;
}
.warningMessage {
    display: none;
    // display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    img {
        height: 50px;
        margin-right: 25px;
    }
    p {
      font-family: 'Lato', sans-serif;
      font-size: 20px;
      font-weight: 700;
      color: white;
      align-self: flex-end;
    }
}
@media screen and (max-width:1000px) {
    .budgetBar .bar .barLeft span h1 {
        font-size: 20px;
    }
}
@media screen and (max-width:800px) {
    .budgetBar .bar .barLeft span h1 {
        font-size: 15px;
    }
}
@media screen and (max-width:700px) {
    .budgetBar .bar .barLeft span h1 {
        font-size: 15px;
    }
    .budgetBar .bar a span {
        visibility: hidden;
    }
    .budgetBar .bar a span:after {
        position: absolute;
        right: 5%;
        visibility: visible;
        content: 'store list';
        white-space: nowrap;
    }
}
@media screen and (max-width:600px) {
    .budgetBar .bar .barLeft span {
        visibility: hidden;
    }
    .budgetBar .bar .abrLeft span:after {
        visibility: visible;
        content: '#1';
    }

}

